# vault

./: .gitignore  AGENTS.md  Cargo.toml  FIXES_VERIFICATION.md  QUICK_START.md  README.md  README_UNLOCK_TEST2.md  SALT_BUG_FIX_COMPLETE.md  SECURITY.md  TEST_SAVE_FLOW.md  TODO.md  WORKFLOW_EXPLANATION.md  plan.md  release-plz.toml
.github/workflows/: build-binaries.yml  main-release.yml  release-plz.yml  stg-bump.yml
docs/: ARCHITECTURE.md  README.md  SECURITY_MODEL.md
docs/api/: domain.md  effects.md  messages.md  ui-components.md
docs/development/: contributing.md  roadmap.md  testing.md
docs/technical/: architecture.md  file-format.md  project-structure.md  security.md  tea-pattern.md  workflow.md
docs/user-guide/: configuration.md  getting-started.md  item-management.md  keybindings.md  vault-management.md
scratch/: test_diacritics.rs  test_tr  test_tr.rs  test_unicode  test_unicode.rs
src/: lib.rs  main.rs
src/app/: effect.rs  message.rs  mod.rs  runtime.rs  state.rs  update.rs
src/clipboard/: mod.rs  secure_copy.rs
src/crypto/: cipher.rs  kdf.rs  keyfile.rs  mod.rs  secure_string.rs
src/domain/: history.rs  item.rs  mod.rs  security_question.rs  tag.rs  vault.rs
src/input/: keybindings.rs  mod.rs  mouse.rs  router.rs
src/storage/: config.rs  mod.rs  registry.rs  vault_file.rs
src/ui/: app.rs  mod.rs
src/ui/screens/: export.rs  (+4 more)
src/utils/: clipboard.rs  error.rs  fuzzy.rs  icons.rs  mask.rs  mod.rs
tests/: create_test2.rs  create_test_vault.rs  test_judas_manual.rs  test_password_unlock.rs  test_salt_fix.rs  test_test2_unlock.rs
(+15 files in other folders)
