[package]
name = "vault"
version = "0.1.0"
edition = "2024"
description = "TUI Vault Manager - Secure storage for sensitive data"
license = "MIT"
publish = false

[features]
default = ["clipboard"]
clipboard = ["arboard"]

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["crossterm", "unstable-widget-ref"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "sync"] }
futures = "0.3"

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
sha2 = "0.10"
subtle = "2.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"

# Data & Utils
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
nucleo = "0.5"
unicode-normalization = "0.1"
caseless = "0.2"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Clipboard (optional)
arboard = { version = "3.4", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
totp-rs = "5.7.1"
chacha20poly1305 = "0.10.1"
aes-gcm-siv = "0.11.1"

[dev-dependencies]
tempfile = "3.12"
